--- a/svgRotation.html
+++ b/svgRotation.html
@@ -11,7 +11,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/rotation.css">
+    <link rel="stylesheet" href="CSS/rotation.css">
 </head>
 
 <body>
