--- a/index.html
+++ b/index.html
@@ -11,14 +11,28 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="CSS/main.css">
 </head>
 
 <body>
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <a href="svgRotation.html">svg rotation</a>
+    <header>
+        <h1>SVG tips og tricks</h1>
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+        <lottie-player src="JSON/67063-header.json" background="transparent" speed="1"
+            style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+
+    </header>
+
+
+    <section>
+        <a href="svgRotation.html">svg rotation</a>
+    </section>
+    <footer>
+
+    </footer>
 
 </body>
 
