--- a/svgRotation.html
+++ b/svgRotation.html
@@ -11,16 +11,28 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="CSS/rotation.css">
+    <link rel="stylesheet" href="CSS/main.css">
 </head>
 
 <body>
-    <h1>Rotating a svg element around its center</h1>
 
-    <h2>the problem</h2>
-    <p>just rotating with this code</p>
+    <header>
+        <h1>SVG tips og tricks</h1>
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+        <lottie-player src="JSON/67063-header.json" background="transparent" speed="1"
+            style="width: 300px; height: 300px;" loop autoplay></lottie-player>
 
-    <pre>
+    </header>
+
+
+    <section>
+
+        <h1>Rotating a svg element around its center</h1>
+
+        <h2>the problem</h2>
+        <p>just rotating with this code</p>
+
+        <pre>
     #rotWrong {
     animation: myRotation 1s infinite linear;
     }
@@ -32,15 +44,15 @@
 </pre>
 
 
-    <svg width="400" height="400">
-        <rect id="rotWrong" x="100" y="100" width="50" height="50" style="fill:rgb(0,0,255)" />
-    </svg>
+        <svg width="400" height="400" border="2px">
+            <rect id="rotWrong" x="100" y="100" width="50" height="50" style="fill:rgb(0,0,255)" />
+        </svg>
 
 
-    <h2>solution</h2>
-    <p>use this in your CSS</p>
+        <h2>solution</h2>
+        <p>use this in your CSS</p>
 
-    <pre>
+        <pre>
 #rotRight {
 transform-box: fill-box;
 transform-origin: center;<br/>
@@ -54,12 +66,17 @@ animation: myRotation 1s infinite linear;
 
         </pre>
 
-    <svg width="400" height="400">
-        <rect id="rotRight" x="100" y="100" width="50" height="50" style="fill:rgb(255, 38, 0)" />
-    </svg>
+        <svg width="400" height="400">
+            <rect id="rotRight" x="100" y="100" width="50" height="50" style="fill:rgb(255, 38, 0)" />
+        </svg>
+    </section>
+
+    <footer>
+        <a href="index.html">back</a>
+
+    </footer>
 
 
-    <a href="index.html">back</a>
 
 
 
