--- a/svgRotation.html
+++ b/svgRotation.html
@@ -50,7 +50,8 @@
 
 
         <h2>solution</h2>
-        <p>use this in your CSS</p>
+        <p>use "transform-box: fill-box" in your CSS to set the bounding box of the svg element, and then use
+            transform-origin to set rotation origin.</p>
 
         <pre>
 #rotRight {
