--- a/svgRotation.html
+++ b/svgRotation.html
@@ -53,6 +53,12 @@
         <p>use "transform-box: fill-box" in your CSS to set the bounding box of the svg element, and then use
             transform-origin to set rotation origin.</p>
 
+        -læs om transform-box <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/transform-box"
+            target="_blank">her</a>-
+
+        -læs om transform-origin <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/transform-origin"
+            target="_blank">her</a>-
+        </p>
         <pre>
 #rotRight {
 transform-box: fill-box;
